<resources>
    <string name="app_name">PersonalProductivity</string>
    <string name="btn_work_start_text">Start</string>
    <string name="btn_work_stop_text">Stop</string>
    <string name="three_hours">3</string>
    <string name="four_hours">4</string>
    <string name="done_button_text">Done!</string>
    <string name="two_hours">2</string>
    <string name="add_project">Add project</string>
    <string name="bottom_bar_work_timer_title">Timer</string>
    <string name="bottom_bar_task_list_title">Tasks</string>
    <string name="checkbox_morning_prep">Morning prep</string>
    <string name="checkbox_lunch_and_dinner">Lunch and dinner</string>
    <string name="checkbox_exercise">Exercise</string>
    <string name="bottom_bar_stats_title">Stats</string>
    <string name="private_study_checkbox">Private study</string>
    <string name="button_toggle_mode">Toggle</string>
    <string name="button_previous">P</string>
    <string name="button_next">N</string>
    <string name="button_increase">+</string>
    <string name="button_decrease">-</string>
    <string name="target_tab">Target</string>
    <string name="record_tab">Record</string>
    <string name="work_list_tab">Work</string>
    <string name="btn_sleep_text">Sleep</string>
    <string name="event_list">Events</string>
    <string name="project_list">Projects</string>
    <string name="event_name">Event name</string>
    <string name="submit">Submit</string>
    <string name="event_date">Event date</string>
    <string name="event_time_start">Event start</string>
    <string name="event_time_end">Event end</string>
    <string name="show_schedule">Schedule</string>
    <string name="task_name">Task name</string>
    <string name="expected_time">Expected time</string>
    <string name="deadline">Days until deadline</string>
</resources>