<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/work_timer_fragment"
          android:title="@string/bottom_bar_work_timer_title"
          app:showAsAction="ifRoom"
          android:orderInCategory="1"
          android:icon="@drawable/ic_work_timer_24" />
    <item android:id="@+id/project_list_fragment"
          android:title="@string/bottom_bar_task_list_title"
          app:showAsAction="ifRoom"
          android:orderInCategory="1"
          android:icon="@drawable/ic_task_list_24" />
    <item android:id="@+id/task_statistics_fragment"
          android:title="@string/bottom_bar_stats_title"
          app:showAsAction="ifRoom"
          android:orderInCategory="1"
          android:icon="@drawable/ic_baseline_bar_chart_24" />
</menu>