<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.tabs.TabLayout android:layout_height="wrap_content"
                                                android:layout_width="0dp" android:id="@+id/tab_list_type"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:tabPaddingBottom="0dp" app:tabPaddingTop="0dp"
                                                app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:text="@string/project_list"/>
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:text="@string/event_list"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent" android:layout_height="0dp"
                                               android:id="@+id/recyclerview_projects"
                                               tools:listitem="@layout/project_recycler_row_item"
                                               app:layout_constraintStart_toStartOf="parent"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               app:layout_constraintHorizontal_bias="0.529"
                                               app:layout_constraintBottom_toTopOf="@+id/fab_create_project"
                                               app:layout_constraintTop_toBottomOf="@+id/tab_list_type"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create_project"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_project"
            android:src="@drawable/ic_add_black_24"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>