<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/edit_name"
            android:hint="@string/event_name" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/edit_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:hint="@string/event_date"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/edit_time_start" android:hint="@string/event_time_start"
            app:layout_constraintTop_toBottomOf="@+id/edit_date" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_submit"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@+id/edit_fun_time_container"
            android:layout_marginStart="16dp" android:layout_marginTop="32dp"/>
    <TextView
            android:layout_width="wrap_content" tools:text="Invalid input"
            android:layout_height="0dp" android:id="@+id/text_message"
            app:layout_constraintTop_toBottomOf="@+id/button_submit"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textColor="@android:color/holo_red_dark"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/edit_time_end" android:hint="@string/event_time_end"
            app:layout_constraintTop_toBottomOf="@+id/edit_time_start"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10" android:id="@+id/edit_school_lessons_container"
            app:layout_constraintTop_toBottomOf="@+id/edit_time_end"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="@+id/edit_time_end">
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 tools:text="0"
                                                                 android:inputType="number"
                                                                 android:layout_height="wrap_content"
                                                                 android:id="@+id/edit_school_lessons"
                                                                 android:hint="School lessons"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edit_school_lessons_container" android:id="@+id/edit_chore_time_container"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="@+id/edit_school_lessons_container">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_chore_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                tools:text="0:00"
                android:hint="Chore time"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edit_chore_time_container" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_chore_time_container" android:id="@+id/edit_fun_time_container">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_fun_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                tools:text="0:00"
                android:hint="Fun time"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>